# ship2earn

./: .gitignore  .gitmodules  README.md  SUMMARY.md  animal_transport_company_hash.zok  book.toml
.github/workflows/: mdbook.yml  rust.yml
applet/: Cargo.toml
applet/src/: lib.rs  utils.rs
blockchain/: .gitignore  README.md  hardhat.config.js  package-lock.json  package.json
blockchain-VCM/: .env  .gitignore  README.md  hardhat.config.js  package-lock.json  package.json
blockchain-VCM/contracts/: AllowanceContract.sol  CarbCertificate.sol  CarbToken.sol  DeviceRegistry.sol  Verifier.sol
blockchain-VCM/ignition/modules/: FirstPart.js  Verifier.js
blockchain-VCM/scripts/: 1_AccessManagement.js  3a_OperationalFunctions.js  3b_OperationalFunctions.js  4_TokenTrading.js  5_AdditionalGetterFunctions.js
blockchain-VCM/scripts/utils/: EmissionReportVerifier.js  Others.js  proof.json
blockchain/contracts/: AllowanceCertificate.sol  AllowanceContract.sol  CRBTokenExchange.sol  CarbCertificate.sol  CarbToken.sol  CertificateContract.sol  DeviceRegistry.sol  IfMinting.sol  MintingContract.sol  PebbleBinding.sol  PebbleRegistration.sol  RankingContract.sol  Verifier.sol  verifier_distance.sol  verifier_gps.sol
blockchain/ignition/deployments/chain-4690/: deployed_addresses.json  journal.jsonl
blockchain/ignition/deployments/chain-4690/artifacts/: AllowanceContractModule#AllowanceContract.dbg.json  AllowanceContractModule#AllowanceContract.json  CarbTokenModule#CarbToken.dbg.json  CarbTokenModule#CarbToken.json  DeviceRegistryModule#DeviceRegistry.dbg.json  DeviceRegistryModule#DeviceRegistry.json  FirstPartModule#AllowanceContract.json  FirstPartModule#DeviceRegistry.dbg.json  FirstPartModule#DeviceRegistry.json  SecondPartModule#CRBTokenExchange.json  SecondPartModule#Verifier.dbg.json  SecondPartModule#Verifier.json  VerifierModule#Verifier.dbg.json  VerifierModule#Verifier.json
blockchain/ignition/modules/: AllowanceContract.js  CRBTokenExchange.js  CarbToken.js  DeviceRegistry.js  FirstPart.js  MintingContract.js  PebbleRegistration.js  RankingContract.js  SecondPart.js  Verifier.js  verifier_distance.js
blockchain/scripts/: 1_AccessManagement.js  2_OperationalSetups.js  3a_OperationalFunctions.js  3b_OperationalFunctions.js  5_AdditionalGetterFunctions.js  AccessManagement.js  AllowanceCheck.js  CalulateSavings.js  CarbTokenActions.js  EmissionReport.js  EmissionReportVerifier.js  ExtractProofData.js  GasFromTxHash.js  OperationalSetups.js  RankingAccessManagement.js  ReportData.js  ScInteractions.js  TokenTrading.js  proof.json  test.js  testFunctions.js
blockchain/scripts/utils/: EmissionReportVerifier.js  GasFromTxHash.js  Others.js
blockchain/test/: MintingContract.test.js  RankingContract.test.js
device/: README.md  adroid-code.py  android-code-mqtt.py  rn.sh
experimentation/ZoKrates/BatchSize1/: Shellscript.sh  input.txt  proof.json  root.zok
experimentation/ZoKrates/BatchSize5/: Shellscript.sh  input.txt  proof.json  root.zok
experimentation/ZoKrates/HashingTest/: Shellscript_Output.txt  root.zok
experimentation/ZoKrates/Mockdata_generator/: Mockdata_generator.py
experimentation/rpi/: README.md
experimentation/rpi/code/: event.proto  gps.py  test2.py  test3.py
experimentation/rpi/results/: README.md  test2_devnet.txt  test3_monitoring.txt
experimentation/zokrates/: hash_assert.zok
proof/: README.md  proof1.json  proof2.json  proof3.json  proof4.json  proof5.json  root.zok  verifier.sol
pycrypto & zokrates/: distance_&_ratio.py  distance_&_ratio.zok  simple_pycrypto_hash.py
rpi/: README.md  diagrams.ipynb  test1_devnet.txt  test1_monitoring.txt  test2_monitoring.txt  test3_devnet.txt  test_base_line_monitoring.txt
rpi/code/: README.md  event_pb2.py  gps.py  test1.py  test2.py  test3.py  umts.sh  wvdial.conf
rpi/gps/: README.md  client.py
sprout/: architecture.drawio  how_to_run_sprout.org
w3bstream/: README.md  compile-circuit.md  create-config.md  interacting-w3bstream.md  overview.md  requirements.md  running-w3bstream.md  sending-data.md
webstream-applet/: Cargo.toml  Makefile  bloat-functions.txt  expand.rs  lines.txt  output  twiggy-monos.txt
webstream-applet/inputs/: proving.key  root.zok  verification.key
webstream-applet/src/: compile.rs  lib.rs
zokrates/: README.md  animal_transport.zok  animal_transport_hash.zok  hash_assert.zok  sum_distance.zok  sum_distance_company.zok  sum_gps.zok
zokrates/sol-co2-ohne-hash/: verifier.sol
