[package]
name = "webstream-applet"
version = "0.1.0"
edition = "2021"

# for wasm
[profile.release]
lto = true
opt-level = 'z' # for further bin size optimizations
codegen-units = 1
strip = true

[build]
target = "wasm32-wasi"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
#zokrates_core = { path = "./../ZoKrates/zokrates_core/" }
zokrates_core = { version = "0.7", git = "https://github.com/Zokrates/ZoKrates.git", workspace = "zokrates_core", default-features = false }
#zokrates_ast = { path = "./../ZoKrates/zokrates_ast/", default-features = false }
zokrates_ast = { version = "0.1", git = "https://github.com/Zokrates/ZoKrates.git", workspace = "zokrates_ast", default-features = false }
zokrates_common = { version = "0.1", git = "https://github.com/Zokrates/ZoKrates.git", workspace = "zokrates_common", default-features = false }
#zokrates_field = { version = "0.5", path = "./../ZoKrates/zokrates_field", default-features = false }
zokrates_field = { version = "0.5", git = "https://github.com/Zokrates/ZoKrates.git", workspace = "zokrates_field", default-features = false }
zokrates_interpreter = { git = "https://github.com/Zokrates/ZoKrates.git", workspace="zokrates_interpreter", default-features = false }
zokrates_fs_resolver = { git = "https://github.com/Zokrates/ZoKrates.git", workspace="zokrates_fs_resolver" }
zokrates_circom = { git = "https://github.com/Zokrates/ZoKrates.git", workspace="zokrates_circom" }
#zokrates_abi = { path = "./../ZoKrates/zokrates_abi" }

hex = "0.4.3"
ethabi ={ version =  "17.2.0", default-features = false, features = ["full-serde"] }
sha2 = "0.10.6"
p256 = { version = "0.11.1", features = ["serde", "ecdsa-core"]}
rand_core = "0.6.4"
signature = "1.6.4"
lazy_static = "1.4.0"
anyhow = "1.0"
typed-arena = "1.4.1"

# w3bstream stuff
ws-sdk = "0.1.17"
rust-embed = "8.4.0"
error = "0.1.9"
