cargo-features = ["profile-rustflags"]

[package]
name = "webstream-applet"
version = "0.1.0"
edition = "2021"

# for wasm
[profile.release]
lto = true # 27->20MB
opt-level = 'z' # for further bin size optimizations
codegen-units = 1
strip = true
rustflags = ["-Zshare-generics"]

[build]
target = "wasm32-wasi"
rustflags = ["-Zshare-generics"]

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
#zokrates_core = { version = "0.7", git = "https://github.com/Zokrates/ZoKrates", workspace = "zokrates_core", default-features = false
#zokrates_core = { version = "0.7", git = "https://github.com/ioCarb/ZoKrates", workspace = "zokrates_core", default-features = false }
zokrates_core = { version = "0.7", path = "./../../ZoKrates/zokrates_core",  default-features = false }

#zokrates_ast = { version = "0.1", git = "https://github.com/Zokrates/ZoKrates", workspace = "zokrates_ast", default-features = false }
#zokrates_ast = { version = "0.1", git = "https://github.com/ioCarb/ZoKrates", workspace = "zokrates_ast", default-features = false }
zokrates_ast = { version = "0.1", path = "./../../ZoKrates/zokrates_ast",  default-features = false }

#zokrates_field = { version = "0.5", git = "https://github.com/Zokrates/ZoKrates", workspace = "zokrates_field", default-features =
#zokrates_field = { version = "0.5", git = "https://github.com/ioCarb/ZoKrates", workspace = "zokrates_field", default-features = false }
zokrates_field = { version = "0.5", path = "./../../ZoKrates/zokrates_field",  default-features = false }

#zokrates_interpreter = { version = "0.1", ://github.com/Zokrates/ZoKrates", workspace = "zokrates_interpreter",default-features = false }
#zokrates_interpreter = { version = "0.1", git = "https://github.com/ioCarb/ZoKrates", workspace = "zokrates_interpreter",default-features = false }
zokrates_interpreter = { version = "0.1", path = "./../../ZoKrates/zokrates_interpreter", default-features = false }
#zokrates_interpreter = { version="0.1", path = "./../../ZoKrates/zokrates_interpreter/", default-features = false }

#zokrates_fs_resolver = { version = "0.5", git = "https://github.com/Zokrates/ZoKrates", workspace="zokrates_fs_resolver" }
#zokrates_fs_resolver = { version = "0.5", git = "https://github.com/ioCarb/ZoKrates", workspace="zokrates_fs_resolver" }
zokrates_fs_resolver = { version = "0.5", path = "./../../ZoKrates/zokrates_fs_resolver" }

#zokrates_circom = { version = "0.1", git = "https://github.com/Zokrates/ZoKrates", workspace="zokrates_circom" }
#zokrates_circom = { version = "0.1", git = "https://github.com/ioCarb/ZoKrates", workspace="zokrates_circom" }
zokrates_circom = { version = "0.1", path = "./../../ZoKrates/zokrates_circom", default-features = false }

zokrates_proof_systems = { version = "0.1", path = "./../../ZoKrates/zokrates_proof_systems/", default-features = false }
zokrates_ark = { version = "0.1", path = "./../../ZoKrates/zokrates_ark", default-features = false }

hex = "0.4.3"
ethabi ={ version =  "17.2.0", default-features = false, features = ["full-serde"] }
sha2 = "0.10.6"
p256 = { version = "0.11.1", features = ["serde", "ecdsa-core"]}
rand_core = "0.6.4"
signature = "1.6.4"
lazy_static = "1.4.0"
anyhow = "1.0"
typed-arena = "1.4.1"

# w3bstream stuff
ws-sdk = "0.1.17"
rust-embed = { version = "8.4.0", features = ["compression"] }
error = "0.1.9"
random = "0.14.0"
rand = "0.8.5"
serde_json = "1.0.117"
